# Eye

./: .pre-commit-config.yaml  LICENSE.md  README.md  go.mod  go.sum  mypy.ini  pyproject.toml
cmd/: README.md  main.go
internal/: README.md
internal/config/: README.md  config.go  config_test.go
internal/report/: README.md  report.go  report_test.go
internal/scanner/: README.md  scanner.go  scanner_test.go
pkg/: README.md
pkg/utils/: utils_test.go
src/: main.py
src/knowledge_base/: README.md  nvd_db.py
src/report/: README.md  html_report.py  pdf_report.py
src/scanner/: README.md  network_scanner.py  web_scanner.py
src/utils/: logger.py
